Support transformations in pattern/texture brushes in pdf

The brush transform was ignored for pattern/texture brushes. Since
fill patterns always have a transform in pdf anyway, we can just
multiply in the brush transform.

Fixes: QTBUG-96978
Change-Id: I80357f61fb879dfb1226d4ef9469ae5c9a9c1147
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Albert Astals Cid <albert.astals.cid@kdab.com>
(cherry picked from commit 2a546690bf457f4bfee0910ba979441511843f8b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>